--- a/Human_Resources_Project.ipynb
+++ b/Human_Resources_Project.ipynb
@@ -2463,6 +2463,15 @@
     "\n",
     "**https://public.tableau.com/app/profile/alexander.porter3156/viz/HR_Dash_17305853475990/HRSummary**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Human Resources End-to-End Project | **Part 4 - Presentation**\n",
+    "\n",
+    "**https://github.com/Alexander-J-Porter/Human-Resources-End-to-End-Project-using-Python-Tableau/blob/main/Human_Resources_Presentation.pdf**"
+   ]
   }
  ],
  "metadata": {
